PyMaker/datas/object2/RawHTML/i3901/Python_DOC_referPages.pythont-3-6-5-indentationerror.txt
<div class="post-text" itemprop="text">
<p>I have just started writing in python, and the indentation is taking the best of me.
I have this code:</p>
<pre><code>import json

if __name__ == '__main__':
    is_json('test')

def is_json(str):
    try:
        json.loads(str)
    except ValueError, e:
        return False
    return True 
</code></pre>
<p>Which throws:</p>
<blockquote>
<p>File "so.py", line 9
      except ValueError, e:
                       ^
  SyntaxError: invalid syntax</p>
</blockquote>
<p>I am using only tabs.</p>
</div>
<div class="post-text" itemprop="text">
<p>Your code had two mistakes:</p>
<ul>
<li><p>First in the <code>except</code> part</p></li>
<li><p>Second is that you declared <code>is_json</code> at the bottom</p></li>
</ul>
<p>If you declare at bottom you may get <code>NameError: name 'is_json' is not defined</code> error.</p>
<pre><code>    import json

    def is_json(str):
        try:
            json.loads(str)
        except ValueError as e:
            return False
        return True

    if __name__ == '__main__':
        is_json('test')
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Have a look at the below 2 points.</p>
<p>(1) Python3 uses different syntax for <strong>try-except</strong> statement for exception handling.</p>
<blockquote>
<p><strong>Replace</strong> <code>except ValueError, e:</code> with <code>except ValueError as e:</code>.</p>
<p><a href="https://docs.python.org/3/tutorial/errors.html" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/errors.html</a></p>
</blockquote>
<p>(2) <strong>Define</strong> your function before if statement. Function definition should be available before the point of usage (call).</p>
<pre><code>import json

def is_json(str):
    try:
        json.loads(str)
    except ValueError as e:
        return False
    return True 

if __name__ == '__main__':
    print(is_json('test')); # False
</code></pre>
<p>Thanks.</p>
</div>
<span class="comment-copy">it's not an indentation issue, but a syntax one (as the error message actually says). Replace <code>,</code> with <code>as</code> and you should be fine, i.e. <code>except ValueError as e</code></span>
<span class="comment-copy">That's not an indentation error. You used the Python 2 syntax for <code>except</code> in Python 3.</span>
<span class="comment-copy"><b>@nikksan</b>, you have used <b>tabs</b> but you should not use <b>tabs</b>. We should use <b>4 spaces</b> to indent the code blocks as it makes our code professional. We should use <b>Pythonic way</b> to write and indent your code. Please check this <b>great article</b> link by visiting at <a href="https://www.python.org/dev/peps/pep-0008/#indentation" rel="nofollow noreferrer">python.org/dev/peps/pep-0008/#indentation</a> and read it. You will enjoy it.</span>
